# HedgeCutter

./: .gitignore  CMakeLists.txt  CMakeSettings.json
hcut/: fib.hcut
include/hcut/: HCut.h
include/hcut/codegen/: Builder.h  Context.h  Def.h  Expr.h  Stmt.h  Type.h  Value.h
include/hcut/lang/: Def.h  Expr.h  Parser.h  Stmt.h  Symbol.h  Token.h  Type.h
res/hcut/: fib.hcut  hello.hcut
src/: main.cpp
src/codegen/: builder.cpp
src/lang/: parse.cpp  parseexpr.cpp  parsestmt.cpp  parsetype.cpp  parseutil.cpp  symbol.cpp  token.cpp
